# attendance-microservice

./: .gitignore  Dockerfile  pyproject.toml  pyproject1.toml
.github/workflows/: ci.yaml
app/: main.py
src/: main.py
