[project]
name = "attendance-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pillow>=10.4.0",
    "playwright>=1.47.0",
    "pytesseract>=0.3.13",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]
